--- a/src/assets/sass/listGroups.scss
+++ b/src/assets/sass/listGroups.scss
@@ -1,3 +1,14 @@
+.list-groups-charts {
+  align-items: stretch;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+
+  canvas {
+    flex: 1;
+  }
+}
+
 .list-groups {
   list-style: none;
   margin: 0;
