Display number of votes per group per entity

--- a/src/assets/sass/listGroups.scss
+++ b/src/assets/sass/listGroups.scss
@@ -58,6 +58,12 @@
           margin-top: 5px;
           white-space: nowrap;
         }
+
+        .list-groups-lists-list-votes {
+          font-size: smaller;
+          margin-top: 5px;
+          text-align: right;
+        }
       }
     }
   }
